refactor swagger config and update permitted swagger endpoints